underline generated word

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="header-background"></div>
     </header>
     <div>
-      <p class="megan-thee">Megan Thee <span id="wordgen"></span></p>
+      <p class="megan-thee">Megan Thee <span class="wordgen" id="wordgen">Stallion</span></p>
     </div>
     <div>
       <button onclick="generateWords()" class="btn-generate">GENERATE</button>
