--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
     <div>
       <button onclick="generateWords()" class="btn-generate">GENERATE</button>
     </div>
-    <footer></footer>
+    <footer>
+      <div class="credits">
+        <p>Dev – <a href="https://twitter.com/floriidaaa">Florida Elago</a></p>
+        <p>Design – <a href="https://twitter.com/angelaestelle">Angela Martinez</a></p>
+        <p>Source – <a href="https://github.com/florida/hot-girl-git">Github</a></p>
+        
+      </div>
+    </footer>
   </main>
 
   <script src="main.js"></script>
