--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
   <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#da532c">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-152550755-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-152550755-1');
+</script>
+
 </head>
 
 <body>
