--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, user-scalable=no" />
   <title>Megan Thee Generator</title>
   <link rel="stylesheet" href="main.css">
   <link rel="apple-touch-icon" sizes="60x60" href="./apple-touch-icon.png">
