--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-152550755-1');
+    gtag('send', 'pageview', location.pathname);
   </script>
 
 </head>
